# my-open-bb

./: .env.example  .gitignore  AGENTS.md  README.md
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: db.py  dependencies.py  main.py  schemas.py
apps/api/app/api/: routes.py
apps/api/app/api/v1/: assets.py  feed.py  health.py  market.py  refresh.py
apps/api/app/core/: config.py  logging.py
apps/api/app/repositories/: feed_repository.py  ingestion_repository.py  market_repository.py
apps/api/app/services/: config_service.py  feed_service.py  ingestion_service.py  openbb_adapter.py  scheduler_service.py
apps/api/tests/: test_config_service.py  test_health.py  test_market_api.py  test_market_repository.py  test_openbb_adapter.py
apps/web/: Dockerfile  biome.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  styles.css  types.ts
apps/web/src/components/: layout.tsx
apps/web/src/lib/: api.ts
apps/web/src/pages/: asset-detail.tsx  dashboard.tsx  feed-stream.tsx
apps/web/tests/: app.test.tsx
configs/: feeds.yaml  watchlist.yaml
docs/: architecture.md  engineering-standards.md  runbook.md
infra/: docker-compose.yml
scripts/: dev-start.sh
